check answer fixed, scoreboard added
