# app.js
@@ -1,8 +1,8 @@
 const express = require("express");
 const logger = require("morgan");
 const app = express();
-
-app.set("port", 3333);
+//for dev
+//app.set("port", 3333);
 app.use(logger("dev"));
 require("./configs/mongoose");
 
@@ -17,14 +17,15 @@ app.use(express.urlencoded({ extended: true }));
 const authRouter = require("./controllers/auth.controller");
 const userRouter = require("./controllers/user.controllers");
 const questionRouter = require("./controllers/question.controller");
-
+const scoreboardRouter = require("./controllers/scoreboard.controller");
 //mount all incoming request
 app.use("/auth", authRouter);
 app.use("/user", userRouter);
 app.use("/question", questionRouter);
+app.use("/scoreboard", scoreboardRouter);
 
 //port listening
-
+//for pro
 var server_port = process.env.YOUR_PORT || process.env.PORT || 80;
 var server_host = process.env.YOUR_HOST || "0.0.0.0";
 app.listen(server_port, server_host, (err, done) => {
@@ -34,7 +35,14 @@ app.listen(server_port, server_host, (err, done) => {
     console.log("Server is listening at port " + app.get("port"));
   }
 });
-
+//for dev
+// app.listen(app.get("port"), (err, done) => {
+//   if (err) {
+//     console.log("Error while listening port " + app.get("port") + " >> " + err);
+//   } else {
+//     console.log("Server is listening at port " + app.get("port"));
+//   }
+// });
 app.use((req, res, next) => {
   next({
     msg: "Error",
